Added Cropped Picture and Project Titles

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Sepehr Salemriad
-logo: "/images/Sepehr_Salemirad.jpg?raw=true"
+logo: "/images/Sepehr_Salemirad.png?raw=true"
 description: >
-  First description 
+  I am an Information Systems graduate student (M.Sc.) with a passion for machine learning, cloud-native web development, and quantitative finance.
   <br><br>
-  Second description 
+  I am currently working as an Enterprise Software Engineer at innovas GmbH (.msg group) with a focus on cloud-native web development using Spring & Angular.
   <br><br>
   <a href="www.linkedin.com/in/sepehrsalemirad">View My LinkedIn Profile</a>
   
