--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sepehr Salemriad
+title: Sepehr Salemirad
 logo: "/images/Sepehr_Salemirad_circle.png?raw=true"
 description: >
   <br><br>
@@ -6,7 +6,7 @@ description: >
   <br><br>
   I am currently working as an Enterprise Software Engineer at innovas GmbH (.msg group) with a focus on cloud-native web development using Spring & Angular.
   <br><br>
-  <a href="www.linkedin.com/in/sepehrsalemirad">View My LinkedIn Profile</a>
+  <a href="https://linkedin.com/in/sepehrsalemirad">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
