--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,17 @@
-title: Sepehr Salemirad
+title: <p align="center"> Sepehr Salemirad </p>
 logo: "/images/Sepehr_Salemirad.png?raw=true"
-description: >
-  <br><br>
+description:
+  <p align="center">
+  <a href=""https://linkedin.com/in/sepehrsalemirad"">LinkedIn</a> |
+  <a href="https://github.com/SepehrRad">GitHub</a>
+  </p>
+
+  <p align="justify">
   I am an Information Systems graduate student (M.Sc.) with a passion for machine learning, cloud-native web development, and quantitative finance.
   <br><br>
   I am currently working as an Enterprise Software Engineer at innovas GmbH (.msg group) with a focus on cloud-native web development using Spring & Angular.
   <br><br>
-  <a href="https://linkedin.com/in/sepehrsalemirad">View My LinkedIn Profile</a>
+  </p>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
