LinkedIn Link Fixed

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align="center"> Sepehr Salemirad </p>
 logo: "/images/Sepehr_Salemirad.png?raw=true"
 description:
   <p align="center">
-  <a href=""https://linkedin.com/in/sepehrsalemirad"">LinkedIn</a> |
+  <a href="https://linkedin.com/in/sepehrsalemirad">LinkedIn</a> |
   <a href="https://github.com/SepehrRad">GitHub</a>
   </p>
 
