--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,11 @@ description:
   I am currently working as an Enterprise Software Engineer at innovas GmbH (.msg group) with a focus on cloud-native web development using Spring & Angular.
   <br><br>
   </p>
-  
+
+  <p align="justify">
+    This portfolio page shows an overview of some of my projects during my professional work as well as my academic studies.
+    <br><br>
+  </p>
+
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: UA-000000-0
