--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,12 @@ description:
   </p>
 
   <p align="justify">
-    This portfolio page shows an overview of some of my projects during my professional work as well as my academic studies.
+    This portfolio page shows an overview of some of my projects during my professional work as well as my academic studies. These projects cover following topics
   </p>
+  <ul>
+  <li>Data Science & Business Intelligence</li>
+  <li>IT Governance & Consulting</li>
+  </ul>
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0
