--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description:
     This portfolio page shows an overview of some of my projects during my professional work as well as my academic studies. These projects cover following topics
   </p>
   <ul>
-  <li>Data Science & Business Intelligence</li>
+  <li>Data Science & BI</li>
   <li>IT Governance & Consulting</li>
   </ul>
 
