--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description:
   </p>
 
   <p align="justify">
-  I am an Information Systems graduate student (M.Sc.) with a passion for machine learning, cloud-native web development, and quantitative finance.
+  I am an Information Systems graduate student (M.Sc.) with exprience and passion for machine learning, cloud-native web development, and quantitative finance.
   <br><br>
   I am currently working as an Enterprise Software Engineer at innovas GmbH (.msg group) with a focus on cloud-native web development using Spring & Angular.
   </p>
